[img] Update avator image.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,10 @@
     <div class="header-bg" id="header-bg"></div>
     <div class="nav-bar" id="nav-bar">
         <div class="nav-bar-avatar" id="nav-bar-avatar">
-            <img class="avatar" src="avart.jpg" alt="showzeng" />
+            <img class="avatar" src="avart.jpg" alt="Lucida" />
         </div>
         <a href="/">
-            <p class="nav-bar-title" id="nav-bar-title">写代码的小超超</p>
+            <p class="nav-bar-title" id="nav-bar-title">Lucida</p>
         </a>
         <a href="/about" class="nav-bar-item">关于</a>
         <a href="/articles" class="nav-bar-item">归档</a>
