--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,10 +2,10 @@
     <title>{{ page.title }}</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="showzeng's blog" />
+    <meta name="description" content="lucida's blog" />
     <meta name="keywords" content="" />
-    <meta name="author" content="showzeng" />
-    <meta name="copyright" content="showzeng" />
+    <meta name="author" content="lucida" />
+    <meta name="copyright" content="lucida" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <style type="text/css">
@@ -14,7 +14,7 @@
          }
     </style>
 
-    <link rel="shortcut icon" href="https://www.z4a.net/images/2017/08/31/shortcut_icon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/img/avator.jpg" type="image/x-icon" />
     <link rel="alternate" type="application/atom+xml" title="Atom" href="" />
 
     <link rel="stylesheet" type="text/css" href="/assets/css/base.css" />
@@ -37,7 +37,7 @@
       </div>
         <div id="header">
             <div class="header-bg" id="header-bg"></div>
-            <a href="/"><img class="header-avatar" src="https://www.z4a.net/images/2017/08/31/avatar.jpg"/></a>
+            <a href="/"><img class="header-avatar" src="/assets/img/avator.jpg"/></a>
         </div>
 
         <div id="content">
