--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,10 @@
     <title>{{ page.title }}</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="showzeng's blog" />
+    <meta name="description" content="Lucida's blog" />
     <meta name="keywords" content="" />
-    <meta name="author" content="showzeng" />
-    <meta name="copyright" content="showzeng" />
+    <meta name="author" content="Lucida" />
+    <meta name="copyright" content="Lucida" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <style type="text/css">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/assets/css/footer.css" type="text/css" />
     <link rel="stylesheet" href="/assets/css/post.css" type="text/css" />
     <link rel="stylesheet" href="/assets/css/syntax.css" type="text/css" />
-    <link rel="shortcut icon" href="https://www.z4a.net/images/2017/08/31/shortcut_icon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/img/avator.jpg" type="image/x-icon" />
     <link rel="alternate" type="application/atom+xml" title="Atom" href="" />
 
 </head>
