--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -20,7 +20,8 @@
   box-sizing: border-box;
   height: 60px;
   width: 100%;
-  position: absolute;;
+  position: absolute;
+  left: 0px;
   bottom: 0px;
   display: inline-block;
   overflow: visible !important;
