--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -44,37 +44,17 @@
           <!-- {{ content }} -->
           <div class="content-body">
             <p class="content-title">关于本站</p>
-            <p class="content-p">本站由 <a href="https://pages.github.com/">Github Pages</a> 、 <a href="//jekyll.com/">Jekyll</a> 和 <a href="//www.iconfont.cn/plus">Iconfont</a> 强力驱动，页面参照 <a href="//jaeger.itscoder.com/">写代码的猴子</a> 的博客（ 别看了，他改版了 :P ）和 <a href="https://twitter.com/showzeng">Twitter</a> 。</p>
-            <p class="content-p">视觉的艺术请看导航栏！</p>
-            <p class="content-p">关于博客，折腾过多次，最开始使用 hexo 框架，主题来来回回换了四五次，但总有不满意的地方，像是一种束缚。直到看到猴哥的博客，决定去看看 Jekyll ，发现可定制化程度比较高，于是开始又一次的折腾，稍作设计，写出自己喜欢的 UI，以后应该会相对稳定了，也没有必要花太多的时间在这方面上。</p>
-            <p class="content-p">还是努力让自己成为一个持续学习和思考的人，而书写，是为了更好地思考。</p>
-            <p class="content-p">最后，如猴哥所言： 但行好事，莫问前程。</p>
+            <p class="content-p">本站由 <a href="https://pages.github.com/">Github Pages</a> 、 <a href="//jekyll.com/">Jekyll</a> 和 <a href="//www.iconfont.cn/plus">Iconfont</a> 强力驱动。</p>
             <p class="content-title">Netlify</p>
             <p class="content-p">出色的静态网站开源库服务提供商，自动部署，还可以给你的网站加个小绿锁，详细信息访问官网：<a href="https://www.netlify.com/">Netlify</a></p>
             <p class="content-title">关于作者</p>
-            <p class="content-p">网络常用 ID： showzeng</p>
-            <p class="content-p">小伙伴们也叫我 小超超 —— Be your own superman.</p>
-            <p class="content-p">物联网工程在读学生，2019年毕业</p>
-            <p class="content-p">学校偏硬件的环境下并未束缚住我对软件的喜爱。而有幸加入 <a href="//team.ncuos.com/">家园工作室</a> ，从此打开新世界的大门。对前端、后台都有所涉猎，目前主要在学 Android。</p>
+            <p class="content-p">Lucida</p>
             <p class="content-title">联系方式</p>
-            <p class="content-p">个人主页: <a href="//www.showzeng.cn">www.showzeng.cn</a></p>
-            <p class="content-p">微博: <a href="//weibo.com/showzeng">showzeng</a></p>
-            <p class="content-p">Github: <a href="https://www.github.com/showzeng">showzeng</a></p>
-            <p class="content-p">邮箱: <a href="mailto:kingstageshow@gmail.com">kingstageshow@gmail.com</a></p>
+            <p class="content-p">个人主页: <a href="//nlls1990.github.io">Lucida</a></p>
+            <p class="content-p">Github: <a href="https://www.github.com/nlls1990">Lucida</a></p>
+            <p class="content-p">邮箱: <a href="mailto:lishuo1607@163.com">lishuo1607@163.com</a></p>
             <p class="content-title">友情链接</p>
-            <p class="friend-link"><a href="//www.itscoder.com/">itsCoder</a></p>
             <p class="friend-link"><a href="//jaeger.itscoder.com/">写代码的猴子</a></p>
-            <p class="friend-link"><a href="//allenwu.itscoder.com/">allenwu</a></p>
-            <p class="friend-link"><a href="//yongyu.itscoder.com/">用语</a></p>
-            <p class="friend-link"><a href="//brucezz.itscoder.com/">Brucezz's Corner</a></p>
-            <p class="friend-link"><a href="https://itsmelo.github.io/">Melo</a></p>
-            <p class="friend-link"><a href="//manjusaka.itscoder.com/">Manjusaka</a></p>
-            <p class="friend-link"><a href="//www.kkblog.me/">guyskk</a></p>
-            <p class="friend-link"><a href="//blog.sujunfei.cn">sujunfei</a></p>
-            <p class="friend-link"><a href="https://zetaoyang.github.io">zetaoyang</a></p>
-            <p class="friend-link"><a href="//imxie.itscoder.com/">三哥</a></p>
-            <p class="friend-link"><a href="//hymane.itscoder.com/">hymane</a></p>
-            <p class="friend-link"><a href="//extremej.itscoder.com/">风哥</a></p>
           </div>
         </div>
     </div>
