--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -80,7 +80,7 @@
 
 .header-bg {
   display: inline-block;
-  background: url(https://www.z4a.net/images/2017/08/31/bg_about.jpg) center;
+  background: url(/assets/img/about-background.jpg) center;
   background-size: cover;
   width: 100%;
   height: 100%;
