--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,12 +4,19 @@
 
 body {
   overflow-x: hidden;
+  /*overflow-x 横向滚动框隐藏 */
   overflow-y: scroll;
+  /* overflow-y 纵向滚动框显示, 同时可以滚动*/
   height: auto;
+  /* 高度根据内容来定, 所以设置为auto*/
   min-height: 100%;
+  /* 设置最小高度为占满显示的一屏 */
   padding: 0 10%;
+  /* 内边距 上下为0 , 左右为10%*/
   width: 80%;
+  /* 宽度为 百分比80% */
   background-color: rgb(223,223,223);
+  /* 背景颜色 */
 }
 
 a {
