[css] Change nav and body width to 60%

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -11,7 +11,7 @@ body {
   /* 高度根据内容来定, 所以设置为auto*/
   min-height: 100%;
   /* 设置最小高度为占满显示的一屏 */
-  padding: 0;
+  padding: 0 20%;
   /* 内边距 上下为0 , 左右为10%*/
   width: 60%;
   /* 宽度为 百分比80% */
