--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -5,6 +5,7 @@
   position: relative;
   -webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
   box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+  /* 设置阴影的效果 */
 }
 
 #content {
@@ -33,7 +34,7 @@
 }
 
 .inner-title {
-    width: 100%;
+    width: 80%;
     height: 75px;
 }
 
