--- a/_includes/author.html
+++ b/_includes/author.html
@@ -3,7 +3,7 @@
   <div class="authorinfo box">
     <p>Author | Lucida Lee</p>
     <p class="bio">
-      Currently a Ph.D. student in Singapore University of Technology and Design in the area of Human-Computer Interaction(HCI).
+      前端/设计/摄影/阅读爱好者.
     </p>
   </div>
 </section>
